<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#48673AB7"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:src="@drawable/u"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_recipe_master"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_exploring_recipes"
        android:textColor="@color/white"
        android:backgroundTint="#253230"
        android:padding="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="26dp" />
</LinearLayout>
